--- a/css/estilos.css
+++ b/css/estilos.css
@@ -134,6 +134,11 @@ label {
 	color: rgb(61,129,246);
 	font-size: 100%;
   }
+.link1a{
+	text-decoration: none;
+	text-align: center;
+}
+
 /*Fin formulario*/
 
 .grilla{
@@ -177,7 +182,7 @@ i{
 		width: 4rem;
 		height: 4rem;
 		margin: 0px 5px 0px 5px;
-		background-image:url(imagenes/CD_v2.png);
+		background-image:url(/imagenes/CD_v2.png);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: 3rem;
@@ -209,7 +214,7 @@ i{
 		width: 4rem;
 		height: 4rem;
 		margin: 0px 5px 0px 5px;
-		background-image:url(imagenes/CD_v2.png);
+		background-image:url(/imagenes/CD_v2.png);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: 3rem;
@@ -299,7 +304,7 @@ nav{
 	width: 5rem;
 	height: 5rem;
 	margin: 0px 0px 0px 5px;
-	background-image:url(imagenes/CD_v2.png);
+	background-image:url(/imagenes/CD_v2.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 4rem;
