--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,11 @@
-/*Mobile First*/
+@import "./base/variables";
+@import "./base/listas";
+@import "./utilidades/extends";
+@import "./utilidades/mixins";
+@import "./utilidades/maps";
+@import "./secciones/header";
+@import "./secciones/main";
+@import "./secciones/footer";
 /*Reset CSS*/
 *{
 	margin: 0;
@@ -6,372 +13,5 @@
 }
 /*Color del cuerpo de la página*/
 body{
-	background-color:rgb(218,211,198);
-}
-/*Inicio del Header*/
-/*Menú de Navegación*/
-nav{
-	display: flex;
-}
-
-.nav-item{
-	margin-right: 2vw;
-	font-family: 'Acme', sans-serif;
-	font-size: 0.75rem;
-}
-
-.nav-link{
-	color: rgb(61,129,246);
-}
-
-.nav-link:hover{
-	background-color: rgba(197, 190, 178, 0.87);
-	border-radius: 75%;
-}
-.navbar-toggler{
-	border: none !important;
-	font-size: 1rem !important;
-}
-
-.navbar-toggler:focus{
-	box-shadow: none !important;
-}
-.navbar-brand{
-	display: none;
-}
-/*Logo de mi nombre*/
-.imagen_logo{
-	display: none;
-}
-.contenedor{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-content: center;
-	width:100%;
-}
-.nombre{
-	display: flex;
-	font-family: 'Wellfleet', monospace;
-	font-size: 1.75rem;
-	margin: auto;
-	color: rgb(61,129,246);
-}
-
-/*Fin del Header*/
-
-/*Inicio de main distintas páginas*/
-
-.imagen_foto{
-	display: none;
-}
-
-/*Clase de Bootstrap modificada*/
-.text-dark{
-	font-family: 'Kanit', sans-serif;
-	font-size: 1.05rem;
-	text-align: center;
-}
-/*Inicio encabezado del curriculum, proyecto, links y contacto*/
-.centrado{
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr;
-}
-
-.bordes{
-	justify-self: center;
-	width: 95%;
-	border:1px ridge black;
-	border-radius: 15px 15px 15px 15px;
-	background-color: rgba(236, 232, 226, 0.945);
-}
-
-h1{
-	text-align: center;
-	color: rgb(61,129,246);
-	font-family: 'Kanit', sans-serif;
-	font-size: 1.25rem;
-	margin: 0px;
-}
-/*Fin encabezado del curriculum, proyecto, links y contacto*/
-/*Parte de la descripción de mi perfil, curriculum y proyectos*/
-.experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n{
-	font-family: 'Kanit', sans-serif;
-	font-size: 1.05rem;
-	text-align: center;
-	margin: 10px 0px 10px 0px;
-	color:#4a4b4b;
-}
-
-.experiencia, .estudios, .referencias, .proyecto, .link{
-	font-family: 'Acme', sans-serif;
-	font-size: 1.25rem;
-	text-align: center;
-	margin: 20px 0px 0px 0px;
-	color: rgb(61,129,246);
-}
-/*Tamaño de imagenes para pantallas mobiles*/
-.proyecto_img{
-	width: 17rem;
-}
-/*Formulario de Contacto*/
-.form_contacto{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 20px 0px 0px 0px;
-}
-
-input,
-textarea{
-  font-family: 'Kanit', sans-serif;
-  font-size: 100%;
-}
-
-label {
-	font-family: 'Wellfleet', monospace;
-	color: rgb(61,129,246);
-	font-size: 100%;
-  }
-.link1a{
-	text-decoration: none;
-	text-align: center;
-}
-
-/*Fin formulario*/
-
-.grilla{
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr;
-	font-family: 'Kanit', sans-serif;
-	font-size: 1rem;
-	color:#4a4b4b;
-	list-style: disc;
-}
-
-/*Fin de main distintas páginas*/
-
-/*Inicio footer*/
-footer{
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-end;
-}
-/*Iconos de Bootstrap modificados*/
-i{
-	font-size: 2rem;
-	color: rgb(61, 129, 246);
-	margin: 0px 5px 0px 5px;
-}
-
-/*Clase de Bootstrap modificada*/
-.text-dark-emphasis{
-	text-align: center;
-	font-family: 'Kanit', sans-serif;
-	font-size: 1.05rem;
-}
-/*Fin footer*/
-/*Media Queries para Pantallas Intermedias*/
-@media screen and (min-width: 500px) and (max-width: 768px){
-	/*Logo de mi nombre*/
-	.imagen_logo{
-		display: flex;
-		align-self: center;
-		width: 4rem;
-		height: 4rem;
-		margin: 0px 5px 0px 5px;
-		background-image:url(../imagenes/CD_v2.png);
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: 3rem;
-		border-radius: 50%;
-	}
-	nav{
-		margin: auto;
-	}
-
-	.imagen_foto{
-		display: none;
-	}
-	.navbar-brand{
-		display:initial;
-	}
-	.imagen_barra{
-		width: 2rem;
-	}
-	.nav-item{
-		font-size: 1rem;
-	}
-}
-/*Media Queries para Pantallas medianas*/
-@media screen and (min-width: 769px) and (max-width: 1023px){
-	/*Logo de mi nombre*/
-	.imagen_logo{
-		display: flex;
-		align-self: center;
-		width: 4rem;
-		height: 4rem;
-		margin: 0px 5px 0px 5px;
-		background-image:url(../imagenes/CD_v2.png);
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: 3rem;
-		border-radius: 50%;
-	}
-	nav{
-		margin: auto;
-	}
-	.cuerpo_info{
-		display: flex;
-		justify-content: space-evenly;
-		flex-wrap: nowrap;
-		align-items:center;
-	}
-	.imagen_foto{
-		display: inline-block;
-		height: 15rem;
-		margin: auto;
-	}
-	.navbar-brand{
-		display:initial;
-	}
-	.imagen_barra{
-		width: 3rem;
-	}
-	.nav-item{
-		margin-right: 0.75vw;
-		font-size: 1rem;
-	}
-	i{
-		font-size: 3rem;
-	}
-	.text-dark-emphasis{
-		font-size: 1.5rem;
-	}
-	.experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n{
-		font-size: 1.15rem;
-	}
-	
-	.experiencia, .estudios, .referencias, .proyecto, .link{
-		font-size: 2rem;
-	}
-	.text-dark{
-		font-size: 1.5rem;
-		text-align: left;
-		width: 70%;
-	}
-	h1{
-		font-size: 2rem;
-	}
-	.grilla{
-		display: grid;
-		grid-template-columns: auto auto;
-		grid-template-rows: auto auto;
-		font-size: 1.15rem;
-	}
-}
-/*Media Queries para Pantallas Grandes*/
-@media screen and (min-width: 1024px){
-/*Inicio del Header*/
-/*Menú de Navegación*/
-nav{
-	margin-left: auto;
-}
-
-.nav-item{
-	margin-right: 1rem;
-	font-size: 1rem;
-}
-
-.navbar-brand{
-	display:initial;
-}
-
-.imagen_barra{
-	width: 3rem;
-}
-
-.nombre{
-	font-size: 2rem;
-}
-
-/*Logo de mi nombre*/
-.imagen_logo{
-	display: flex;
-	align-self: center;
-	width: 5rem;
-	height: 5rem;
-	margin: 0px 0px 0px 5px;
-	background-image:url(../imagenes/CD_v2.png);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 4rem;
-	border-radius: 50%;
-}
-
-/*Fin del Header*/
-
-/*Inicio de main distintas páginas*/
-.cuerpo_info{
-	display: flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-}
-.imagen_foto{
-	display: inline-block;
-	height: 20rem;
-	margin: auto;
-}
-/*Clase de Bootstrap modificada*/
-.text-dark{
-	font-size: 1.5rem;
-	text-align: left;
-	width: 40%;
-}
-
-/*Parte de la descripción de mi perfil, curriculum y proyectos*/
-.experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n{
-	font-size: 1.5rem;
-}
-
-.experiencia, .estudios, .referencias, .proyecto, .link{
-	font-size: 2rem;
-}
-
-.centrado{
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr;
-}
-
-.bordes{
-	height: 3rem;
-}
-
-h1{
-	font-size: 2.5rem;
-}
-
-.grilla{
-	display: grid;
-	grid-template-columns: auto auto;
-	grid-template-rows: auto auto;
-	font-size: 1.5rem;
-}
-/*Fin de main distintas páginas*/
-
-/*Inicio footer*/
-
-/*Iconos de Bootstrap modificados*/
-i{
-	font-size: 3rem;
-}
-
-/*Clase de Bootstrap modificada*/
-.text-dark-emphasis{
-	font-size: 1.5rem;
-}
-/*Fin footer*/
+	background-color:$colorPrincipalBody;
 }
