--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -19,3 +19,6 @@ $anchoBorde:95%;
 $justificarBorde:center;
 $alinearItem: center;
 $estiloLista:disc;
+$direccionFlexH: row;
+$juntarFlex: wrap;
+$anchoContenedor:100%;
