--- a/scss/utilidades/_maps.scss
+++ b/scss/utilidades/_maps.scss
@@ -3,4 +3,5 @@ $tamanios:(
     alto: 3rem,
     fuentePorcentaje:100%,
     margenVistaAlto:2vw,
-    bordeRedondo:75%)
+    bordeRedondo:75%,
+    margenNombre: auto)
