--- a/css/estiloCOPIA.css
+++ b/css/estiloCOPIA.css
@@ -1,34 +1,34 @@
 /*Mobile First*/
-/*Reset CSS*/
+/*Reset CSS
 *{
 	margin: 0;
 	padding: 0;
-}
-/*Color del cuerpo de la página*/
+}*/
+/*Color del cuerpo de la página
 body{
 	background-color:rgb(218,211,198);
-}
+}*/
 /*Inicio del Header*/
 /*Menú de Navegación*/
-nav{
+/*nav{
 	display: flex;
-}
+}*/
 
-.nav-item{
+/*.nav-item{
 	margin-right: 2vw;
 	font-family: 'Acme', sans-serif;
 	font-size: 0.75rem;
-}
+}*/
 
-.nav-link{
+/*.nav-link{
 	color: rgb(61,129,246);
 }
 
 .nav-link:hover{
 	background-color: rgba(197, 190, 178, 0.87);
 	border-radius: 75%;
-}
-.navbar-toggler{
+}*/
+/*.navbar-toggler{
 	border: none !important;
 	font-size: 1rem !important;
 }
@@ -38,110 +38,110 @@ nav{
 }
 .navbar-brand{
 	display: none;
-}
-/*Logo de mi nombre*/
+}*/
+/*Logo de mi nombre
 .imagen_logo{
 	display: none;
-}
-.contenedor{
+}*/
+/*.contenedor{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	align-content: center;
 	width:100%;
-}
-.nombre{
+}*/
+/*.nombre{
 	display: flex;
 	font-family: 'Wellfleet', monospace;
 	font-size: 1.75rem;
 	margin: auto;
 	color: rgb(61,129,246);
-}
+}*/
 
 /*Fin del Header*/
 
 /*Inicio de main distintas páginas*/
 
-.imagen_foto{
+/*.imagen_foto{
 	display: none;
-}
+}*/
 
 /*Clase de Bootstrap modificada*/
-.text-dark{
+/*.text-dark{
 	font-family: 'Kanit', sans-serif;
 	font-size: 1.05rem;
 	text-align: center;
-}
+}*/
 /*Inicio encabezado del curriculum, proyecto, links y contacto*/
-.centrado{
+/*.centrado{
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 1fr;
-}
+}*/
 
-.bordes{
+/*.bordes{
 	justify-self: center;
 	width: 95%;
 	border:1px ridge black;
 	border-radius: 15px 15px 15px 15px;
 	background-color: rgba(236, 232, 226, 0.945);
-}
+}*/
 
-h1{
+/*h1{
 	text-align: center;
 	color: rgb(61,129,246);
 	font-family: 'Kanit', sans-serif;
 	font-size: 1.25rem;
 	margin: 0px;
-}
+}*/
 /*Fin encabezado del curriculum, proyecto, links y contacto*/
 /*Parte de la descripción de mi perfil, curriculum y proyectos*/
-.experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n{
+/*.experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n{
 	font-family: 'Kanit', sans-serif;
 	font-size: 1.05rem;
 	text-align: center;
 	margin: 10px 0px 10px 0px;
 	color:#4a4b4b;
-}
-
+}*/
+/*
 .experiencia, .estudios, .referencias, .proyecto, .link{
 	font-family: 'Acme', sans-serif;
 	font-size: 1.25rem;
 	text-align: center;
 	margin: 20px 0px 0px 0px;
 	color: rgb(61,129,246);
-}
+}*/
 /*Tamaño de imagenes para pantallas mobiles*/
-.proyecto_img{
+/*.proyecto_img{
 	width: 17rem;
-}
+}*/
 /*Formulario de Contacto*/
-.form_contacto{
+/*.form_contacto{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin: 20px 0px 0px 0px;
-}
+}*/
 
-input,
+/*input,
 textarea{
   font-family: 'Kanit', sans-serif;
   font-size: 100%;
-}
+}*/
 
-label {
+/*label {
 	font-family: 'Wellfleet', monospace;
 	color: rgb(61,129,246);
 	font-size: 100%;
-  }
-.link1a{
+  }*/
+/*.link1a{
 	text-decoration: none;
 	text-align: center;
-}
+}*/
 
 /*Fin formulario*/
 
-.grilla{
+/*.grilla{
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 1fr;
@@ -149,30 +149,33 @@ label {
 	font-size: 1rem;
 	color:#4a4b4b;
 	list-style: disc;
-}
+}*/
 
 /*Fin de main distintas páginas*/
 
-/*Inicio footer*/
+/*Inicio footer
 footer{
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-end;
 }
-/*Iconos de Bootstrap modificados*/
+/*Iconos de Bootstrap modificados
 i{
 	font-size: 2rem;
 	color: rgb(61, 129, 246);
 	margin: 0px 5px 0px 5px;
 }
 
-/*Clase de Bootstrap modificada*/
+/*Clase de Bootstrap modificada
 .text-dark-emphasis{
 	text-align: center;
 	font-family: 'Kanit', sans-serif;
 	font-size: 1.05rem;
 }
 /*Fin footer*/
+
+
+
 /*Media Queries para Pantallas Intermedias*/
 @media screen and (min-width: 500px) and (max-width: 768px){
 	/*Logo de mi nombre*/
