--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -11,6 +11,7 @@ $margenesDescTitulo2: 10px 0px 10px 0px;
 $redondeoBorde: 15px 15px 15px 15px;
 $pantallaFlex: flex;
 $pantallaGrilla: grid;
+$pantallaInicio: initial;
 $imagenesNoMostrar: none;
 $tamanioGrilla: 1fr;
 $tamanioGrillaAuto: auto auto;
@@ -22,3 +23,6 @@ $estiloLista:disc;
 $direccionFlexH: row;
 $juntarFlex: wrap;
 $anchoContenedor:100%;
+$repiteSiNo: no-repeat;
+$imagenesFondo: center;
+$bordeRedondeadoPorcentaje: 50%;
