--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -70,3 +70,10 @@ label{
     @extend %paraGrilla;
     font-size: nth($tamanioReutilizable, 2 );
 }
+/*Media Queries para Pantallas Intermedias*/
+@media screen and (min-width: 500px) and (max-width: 768px){
+    /*main*/
+	.imagen_foto{
+		display: $imagenesNoMostrar;
+	}
+}
