--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -6,6 +6,7 @@ $fuenteFamilia: 'Kanit', sans-serif;
 $fuenteFamilia2: 'Acme', sans-serif;
 $fuenteFamilia3: 'Wellfleet', monospace;
 $margenesIconoFooter: 0px 5px 0px 5px;
+$margenesImagenLogo:0px 0px 0px 5px;
 $margenesDescTitulo: 20px 0px 0px 0px;
 $margenesDescTitulo2: 10px 0px 10px 0px;
 $redondeoBorde: 15px 15px 15px 15px;
@@ -17,12 +18,20 @@ $tamanioGrilla: 1fr;
 $tamanioGrillaAuto: auto auto;
 $lineaBorde:1px ridge black;
 $anchoBorde:95%;
+$anchoTexto: 70%;
+$anchoTexto2: 40%;
 $justificarBorde:center;
 $alinearItem: center;
+$alinearTextoIzq: left;
 $estiloLista:disc;
 $direccionFlexH: row;
 $juntarFlex: wrap;
+$juntarFlex2: nowrap;
 $anchoContenedor:100%;
 $repiteSiNo: no-repeat;
 $imagenesFondo: center;
+$imagenFoto: inline-block;
 $bordeRedondeadoPorcentaje: 50%;
+$justificarContenido: space-evenly;
+$justificarContenido2: space-between;
+$alinearItemFlex: flex-end;
