--- a/scss/utilidades/_maps.scss
+++ b/scss/utilidades/_maps.scss
@@ -1,7 +1,10 @@
 $tamanios:(	
     anchoImagenes:17rem,
+    altoImagenes: 15rem,
+    altoImagen1024: 20rem,
     alto: 3rem,
     fuentePorcentaje:100%,
     margenVistaAlto:2vw,
+    margenDerecho:0.75vw,
     bordeRedondo:75%,
     margenNombre: auto)
