--- a/css/estilos.css
+++ b/css/estilos.css
@@ -97,7 +97,70 @@ nav {
   .nav-item {
     font-size: 1rem;
   }
-  /*Fin Header*/
+}
+/*Media Queries para Pantallas medianas*/
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+  /*Logo de mi nombre*/
+  .imagen_logo {
+    display: flex;
+    align-self: center;
+    width: 4rem;
+    height: 4rem;
+    margin: 0px 5px 0px 5px;
+    background-image: url(../imagenes/CD_v2.png);
+    background-size: 3rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+  }
+  nav {
+    margin: auto;
+  }
+  .navbar-brand {
+    display: initial;
+  }
+  .nav-item {
+    font-size: 1rem;
+    margin-right: 0.75vw;
+  }
+  .imagen_barra {
+    width: 3rem;
+  }
+}
+/*Media Queries para Pantallas Grandes*/
+@media screen and (min-width: 1024px) {
+  /*Inicio del Header*/
+  /*Menú de Navegación*/
+  nav {
+    margin-left: auto;
+  }
+  .nav-item {
+    font-size: 1rem;
+    margin-right: 1rem;
+  }
+  .navbar-brand {
+    display: initial;
+  }
+  .imagen_barra {
+    width: 3rem;
+  }
+  .nombre {
+    font-size: 2rem;
+  }
+  /*Logo de mi nombre*/
+  .imagen_logo {
+    display: flex;
+    align-self: center;
+    width: 5rem;
+    height: 5rem;
+    margin: 0px 0px 0px 5px;
+    background-image: url(../imagenes/CD_v2.png);
+    background-size: 4rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+  }
+  /*Fin del Header*/
 }
 /*Inicio de main distintas páginas*/
 /*Clase de Bootstrap modificada*/
@@ -182,6 +245,83 @@ label {
     display: none;
   }
 }
+/*Media Queries para Pantallas medianas*/
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+  .cuerpo_info {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  .imagen_foto {
+    display: inline-block;
+    height: 15rem;
+    margin: auto;
+  }
+  .experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n {
+    font-size: 1.15rem;
+  }
+  .experiencia, .estudios, .referencias, .proyecto, .link {
+    font-size: 2rem;
+  }
+  .text-dark {
+    text-align: left;
+    width: 70%;
+    font-size: 1.5rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  .grilla {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    font-size: 1.15rem;
+  }
+}
+/*Media Queries para Pantallas Grandes*/
+@media screen and (min-width: 1024px) {
+  .cuerpo_info {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .imagen_foto {
+    display: inline-block;
+    height: 20rem;
+    margin: auto;
+  }
+  /*Clase de Bootstrap modificada*/
+  .text-dark {
+    text-align: left;
+    width: 40%;
+    font-size: 1.5rem;
+  }
+  /*Parte de la descripción de mi perfil, curriculum y proyectos*/
+  .experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n {
+    font-size: 1.5rem;
+  }
+  .experiencia, .estudios, .referencias, .proyecto, .link {
+    font-size: 2rem;
+  }
+  .centrado {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  .bordes {
+    height: 3rem;
+  }
+  h1 {
+    font-size: 2.5rem;
+  }
+  .grilla {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    font-size: 1.5rem;
+  }
+}
 /*Inicio footer mobile*/
 /*Clase de Bootstrap modificada*/
 .text-dark-emphasis {
@@ -204,6 +344,26 @@ footer {
 }
 
 /*Fin footer mobile*/
+/*Media Queries para Pantallas medianas*/
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+  i {
+    font-size: 3rem;
+  }
+  .text-dark-emphasis {
+    font-size: 1.5rem;
+  }
+}
+/*Media Queries para Pantallas Grandes*/
+@media screen and (min-width: 1024px) {
+  /*Iconos de Bootstrap modificados*/
+  i {
+    font-size: 3rem;
+  }
+  /*Clase de Bootstrap modificada*/
+  .text-dark-emphasis {
+    font-size: 1.5rem;
+  }
+}
 /*Reset CSS*/
 * {
   margin: 0;
