--- a/css/estilos.css
+++ b/css/estilos.css
@@ -244,6 +244,12 @@ label {
   .imagen_foto {
     display: none;
   }
+  .proyecto_img {
+    transition: transform 0.5s;
+  }
+  .proyecto_img:hover {
+    transform: scale(1.1);
+  }
 }
 /*Media Queries para Pantallas medianas*/
 @media screen and (min-width: 769px) and (max-width: 1023px) {
@@ -277,6 +283,12 @@ label {
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     font-size: 1.15rem;
+  }
+  .proyecto_img {
+    transition: transform 0.5s;
+  }
+  .proyecto_img:hover {
+    transform: scale(1.1);
   }
 }
 /*Media Queries para Pantallas Grandes*/
@@ -320,6 +332,12 @@ label {
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     font-size: 1.5rem;
+  }
+  .proyecto_img {
+    transition: transform 0.5s;
+  }
+  .proyecto_img:hover {
+    transform: scale(1.1);
   }
 }
 /*Inicio footer mobile*/
