--- a/css/estilos.css
+++ b/css/estilos.css
@@ -217,16 +217,26 @@ h1 {
   margin: 20px 0px 0px 0px;
 }
 
-input,
+form {
+  text-align: center;
+}
+
+input[type=text],
 textarea {
+  width: 50%;
   font-family: "Kanit", sans-serif;
   font-size: 100%;
+  margin: 8px 0;
+  border-radius: 6px;
+  border: 1px solid #faf6f0;
 }
 
 label {
+  width: 100%;
   font-family: "Wellfleet", monospace;
   color: rgb(61, 129, 246);
   font-size: 100%;
+  margin: 4px 0;
 }
 
 /*Fin formulario*/
@@ -265,8 +275,9 @@ label {
   }
   .imagen_foto {
     display: inline-block;
-    height: 15rem;
-    margin: auto;
+    height: 13rem;
+    width: 13rem;
+    border-radius: 10%;
   }
   .experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n {
     font-size: 1.15rem;
@@ -276,8 +287,10 @@ label {
   }
   .text-dark {
     text-align: left;
-    width: 70%;
+    width: 69%;
     font-size: 1.5rem;
+    margin-left: 1rem;
+    margin-bottom: 0px;
   }
   h1 {
     font-size: 2rem;
@@ -306,12 +319,14 @@ label {
     display: inline-block;
     height: 20rem;
     margin: auto;
+    border-radius: 10%;
   }
   /*Clase de Bootstrap modificada*/
   .text-dark {
     text-align: left;
     width: 40%;
     font-size: 1.5rem;
+    margin-left: 1rem;
   }
   /*Parte de la descripción de mi perfil, curriculum y proyectos*/
   .experiencia_cv, .estudios_cv, .referencias_cv, .proyecto1, .proyecto2, .proyecto_n, .link1, .link2, .link_n {
@@ -394,6 +409,9 @@ footer {
 
 /*Color del cuerpo de la página*/
 body {
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto auto auto;
   background-color: rgb(218, 211, 198);
 }
 
