--- a/scss/utilidades/_maps.scss
+++ b/scss/utilidades/_maps.scss
@@ -1,8 +1,9 @@
 $tamanios:(	
     anchoImagenes:17rem,
-    altoImagenes: 15rem,
+    altoImagenes: 13rem,
     altoImagen1024: 20rem,
     alto: 3rem,
+    anchoImagenCV: 13rem,
     fuentePorcentaje:100%,
     margenVistaAlto:2vw,
     margenDerecho:0.75vw,
